# ramp

./: .gitignore  main.py  pyproject.toml
.devcontainer/: devcontainer.json
apps/: ramp_app.py
notebooks/: ramp_math_proof.ipynb
notebooks/.ipynb_checkpoints/: ramp_math_proof-checkpoint.ipynb
scripts/: demo_ramp.py
src/ramp/: math.py  plot.py
