[project]
name = "ramp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
